update api service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - ./mysql-db/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   auth-service:
+    ports:
+      - "5000:5000"
     build: 
       context: ./auth-service
       dockerfile: ../Dockerfile
