--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Database Credentials
-DB_ROOT_PASSWORD=<Put Your Password Here>
+DB_ROOT_PASSWORD=password
 DB_NAME=video_db
 DB_USER=root
 
 # Security
-JWT_SECRET_KEY=<Put Your Secret Key Here>
+JWT_SECRET_KEY=ThisIsASecurityKey
