--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 DB_ROOT_PASSWORD=password
 DB_NAME=video_db
 DB_USER=root
+DB_DSN=root:password@tcp(mysql-db:3306)/video_db
 
 # Security
 JWT_SECRET_KEY=ThisIsASecurityKey
