--- a/.env
+++ b/.env
@@ -1,8 +1,5 @@
-# Database Credentials
-DB_ROOT_PASSWORD=password
-DB_NAME=video_db
-DB_USER=root
-DB_DSN=root:password@tcp(mysql-db:3306)/video_db
+MYSQL_USER=video_user
+MYSQL_PASSWORD=video_pass
+MYSQL_DATABASE=video_db
 
-# Security
-JWT_SECRET_KEY=ThisIsASecurityKey
+DB_DSN=video_user:video_pass@tcp(mysql-db:3306)/video_db
